internal/app/playbooks/role/catalogs/Observability/OpenSearch/2.21.0/files/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: opensearch-dashboard
  namespace: logging
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - "opensearch-dashboards.cnstudio.com"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: opensearch-dashboards
        port:
          number: 5601
